<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background ="#658BEC"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="@android:integer/config_longAnimTime"
            android:hint="@string/city_state" />
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/ok" />
    </LinearLayout>
    <TextView
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:id="@+id/txtviewThanhPho"
        android:textColor="@color/colorAccent"
        android:text="@string/tenthanhpho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/txtviewTenQuocGia"
        android:text="@string/country_name"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:contentDescription="Anh mẫu"
        android:id="@+id/imageViewMain"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />
    <TextView
        android:id="@+id/txtviewNhietdo"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:textColor="#FF0059"
        android:textStyle="bold"
        android:padding="2dp"
        android:text="@string/nhietdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_gravity="center"
        android:text="@string/trangthai"
        android:id="@+id/txtviewTrangthai"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center"
                android:text="@string/doam"
                android:textStyle="italic"
                android:textSize="25sp"
                android:id="@+id/txtviewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/cloud"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center"
                android:text="@string/may"
                android:textStyle="italic"
                android:textSize="25sp"
                android:id="@+id/txtviewMay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/wind"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:layout_gravity="center"
                android:text="@string/gio"
                android:textStyle="italic"
                android:textSize="25sp"
                android:id="@+id/txtviewGio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/txtviewCapNhat"
        android:layout_gravity="center"
        android:text="@string/ngaycapnhat"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:id="@+id/btnNgaytieptheo"
        android:text="@string/cacngaytieptheo"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>